Upgrade Character sort implementation
