# storage/api-docs/api-docs.json
@@ -43,11 +43,20 @@
                     {
                         "name": "sort_by",
                         "in": "query",
-                        "description": "The sort_by query: to sort by one of name, gender or height (add sort.asc to sort in ascending order, sort.desc to sort in descending order. Example: name.asc, name.desc, gender.asc, height.desc)",
+                        "description": "The sort_by query: to sort by one of name, gender or height",
                         "schema": {
                             "type": "string"
                         },
-                        "example": "height.desc"
+                        "example": "height"
+                    },
+                    {
+                        "name": "sort_dir",
+                        "in": "query",
+                        "description": "The sort direction: to sort by one of name, gender or height (use asc to sort in ascending order, desc to sort in descending order. If this parameter is not specified, the sort direction default to asc",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "asc"
                     }
                 ],
                 "responses": {
